EOSIO_HOME was already in use by test scripts and it was causing them to tweak out on NP test

--- a/scripts/.environment
+++ b/scripts/.environment
@@ -9,16 +9,16 @@ export EOSIO_VERSION_SUFFIX=$(cat $REPO_ROOT/CMakeLists.txt | grep -E "set\([ +]
 export EOSIO_VERSION="${EOSIO_VERSION_MAJOR}.${EOSIO_VERSION_MINOR}.${EOSIO_VERSION_PATCH}-${EOSIO_VERSION_SUFFIX}"
 
 export INSTALL_LOCATION=${INSTALL_LOCATION:-$HOME}
-export EOSIO_HOME="${INSTALL_LOCATION}/eosio/${EOSIO_VERSION}"
+export EOSIO_INSTALL_DIR="${INSTALL_LOCATION}/eosio/${EOSIO_VERSION}"
 export TEMP_DIR="${INSTALL_LOCATION}/tmp"
 
-export SRC_DIR=${EOSIO_HOME}/src
-export OPT_DIR=${EOSIO_HOME}/opt
-export VAR_DIR=${EOSIO_HOME}/var
-export ETC_DIR=${EOSIO_HOME}/etc
-export BIN_DIR=${EOSIO_HOME}/bin
-export LIB_DIR=${EOSIO_HOME}/lib
-export DATA_DIR=${EOSIO_HOME}/data
+export SRC_DIR=${EOSIO_INSTALL_DIR}/src
+export OPT_DIR=${EOSIO_INSTALL_DIR}/opt
+export VAR_DIR=${EOSIO_INSTALL_DIR}/var
+export ETC_DIR=${EOSIO_INSTALL_DIR}/etc
+export BIN_DIR=${EOSIO_INSTALL_DIR}/bin
+export LIB_DIR=${EOSIO_INSTALL_DIR}/lib
+export DATA_DIR=${EOSIO_INSTALL_DIR}/data
 
 # CMAKE
 export CMAKE_VERSION_MAJOR=3
