--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -42,26 +42,26 @@ steps:
       - "queue=mac-anka-large-node-fleet"
     timeout: 120
 
-  - label: ":aws: Amazon Linux 2 Build"
-    command:
-      - "./scripts/eosio_build.sh -y -P -m"
-      - "tar -pczf build.tar.gz build; if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi"
-    agents:
-      queue: "automation-large-builder-fleet"
-    artifact_paths: "build.tar.gz"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.1.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 120
+  # - label: ":aws: Amazon Linux 2 Build"
+  #   command:
+  #     - "./scripts/eosio_build.sh -y -P -m"
+  #     - "tar -pczf build.tar.gz build; if [[ ! -f build.tar.gz ]]; then echo 'ERROR: No build.tar.gz artifact found!' && exit 1; fi"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   artifact_paths: "build.tar.gz"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.1.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 120
 
   - label: ":centos: CentOS 7 Build"
     command:
@@ -127,221 +127,221 @@ steps:
         workdir: /data/job
     timeout: 120
 
-  - wait
+  # - wait
 
-  # MacOS Mojave
-  - label: ":darwin: [Darwin] Mojave Tests"
-    command:
-      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
-      - "cd eos && ./scripts/parallel-test.sh"
-    agents:
-      - "queue=mac-anka-node-fleet"
-    plugins:
-      chef/anka#v0.4.4:
-        no-volume: true
-        inherit-environment-vars: true
-        bash-interactive: true
-        vm-name: $ANKA_MOJAVE_TEMPLATE
-        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
-        always-pull: true
-        debug: true
-        wait-network: true
-    timeout: 120
+  # # MacOS Mojave
+  # - label: ":darwin: [Darwin] Mojave Tests"
+  #   command:
+  #     - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+  #     - "cd eos && ./scripts/parallel-test.sh"
+  #   agents:
+  #     - "queue=mac-anka-node-fleet"
+  #   plugins:
+  #     chef/anka#v0.4.4:
+  #       no-volume: true
+  #       inherit-environment-vars: true
+  #       bash-interactive: true
+  #       vm-name: $ANKA_MOJAVE_TEMPLATE
+  #       vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+  #       always-pull: true
+  #       debug: true
+  #       wait-network: true
+  #   timeout: 120
 
-  - label: ":darwin: [Darwin] Mojave NP Tests"
-    command:
-      - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
-      - "cd eos && ./scripts/serial-test.sh"
-    agents:
-      - "queue=mac-anka-node-fleet"
-    plugins:
-      chef/anka#v0.4.4:
-        no-volume: true
-        inherit-environment-vars: true
-        bash-interactive: true
-        vm-name: $ANKA_MOJAVE_TEMPLATE
-        vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
-        always-pull: true
-        debug: true
-        wait-network: true
-    timeout: 120
+  # - label: ":darwin: [Darwin] Mojave NP Tests"
+  #   command:
+  #     - "tar -xzf /Network/NAS/MAC_FLEET/BUILDKITE/artifacts/${ANKA_MOJAVE_TEMPLATE}-${BUILDKITE_PIPELINE_SLUG}-${BUILDKITE_BUILD_ID}.tar.gz"
+  #     - "cd eos && ./scripts/serial-test.sh"
+  #   agents:
+  #     - "queue=mac-anka-node-fleet"
+  #   plugins:
+  #     chef/anka#v0.4.4:
+  #       no-volume: true
+  #       inherit-environment-vars: true
+  #       bash-interactive: true
+  #       vm-name: $ANKA_MOJAVE_TEMPLATE
+  #       vm-registry-tag: "${ANKA_TEMPLATE_TAG}::${MAC_TAG}"
+  #       always-pull: true
+  #       debug: true
+  #       wait-network: true
+  #   timeout: 120
 
-  # Amazon Linux 2
-  - label: ":aws: Amazon Linux 2 Tests"
-    command:
-      - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":aws: Amazon Linux 2 Build\""
-      - "./scripts/parallel-test.sh"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
+  # # Amazon Linux 2
+  # - label: ":aws: Amazon Linux 2 Tests"
+  #   command:
+  #     - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":aws: Amazon Linux 2 Build\""
+  #     - "./scripts/parallel-test.sh"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
 
-  - label: ":aws: Amazon Linux 2 NP Tests"
-    command:
-      - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":aws: Amazon Linux 2 Build\""
-      - "./scripts/serial-test.sh"
-    label: ":aws: Amazon Linux 2 NP Tests"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
+  # - label: ":aws: Amazon Linux 2 NP Tests"
+  #   command:
+  #     - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":aws: Amazon Linux 2 Build\""
+  #     - "./scripts/serial-test.sh"
+  #   label: ":aws: Amazon Linux 2 NP Tests"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:amazonlinux2_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
 
-  # CentOS
-  - label: ":centos: CentOS 7 Tests"
-    command:
-      - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":centos: CentOS 7 Build\""
-      - "./scripts/parallel-test.sh"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
+  # # CentOS
+  # - label: ":centos: CentOS 7 Tests"
+  #   command:
+  #     - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":centos: CentOS 7 Build\""
+  #     - "./scripts/parallel-test.sh"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
 
-  - label: ":centos: CentOS 7 NP Tests"
-    command:
-      - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":centos: CentOS 7 Build\""
-      - "./scripts/serial-test.sh"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
+  # - label: ":centos: CentOS 7 NP Tests"
+  #   command:
+  #     - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":centos: CentOS 7 Build\""
+  #     - "./scripts/serial-test.sh"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:centos7_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
 
-  # Ubuntu 16.04
-  - label: ":ubuntu: Ubuntu 16.04 Tests"
-    command:
-      - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 16.04 Build\""
-      - "./scripts/parallel-test.sh"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
+  # # Ubuntu 16.04
+  # - label: ":ubuntu: Ubuntu 16.04 Tests"
+  #   command:
+  #     - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 16.04 Build\""
+  #     - "./scripts/parallel-test.sh"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
 
-  - label: ":ubuntu: Ubuntu 16.04 NP Tests"
-    command:
-      - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 16.04 Build\""
-      - "./scripts/serial-test.sh"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
+  # - label: ":ubuntu: Ubuntu 16.04 NP Tests"
+  #   command:
+  #     - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 16.04 Build\""
+  #     - "./scripts/serial-test.sh"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu16_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
 
-  # Ubuntu 18.04
-  - label: ":ubuntu: Ubuntu 18.04 Tests"
-    command:
-      - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 18.04 Build\""
-      - "./scripts/parallel-test.sh"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
+  # # Ubuntu 18.04
+  # - label: ":ubuntu: Ubuntu 18.04 Tests"
+  #   command:
+  #     - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 18.04 Build\""
+  #     - "./scripts/parallel-test.sh"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
 
-  - label: ":ubuntu: Ubuntu 18.04 NP Tests"
-    command:
-      - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 18.04 Build\""
-      - "./scripts/serial-test.sh"
-    agents:
-      queue: "automation-large-builder-fleet"
-    plugins:
-      ecr#v1.1.4:
-        login: true
-        account_ids: "436617320021"
-        no-include-email: true
-        region: "us-west-2"
-      docker#v3.2.0:
-        shell: ["/bin/bash", "-i", "-e", "-c"]
-        debug: true
-        image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-4"
-        propagate-environment: true
-        workdir: /data/job
-    timeout: 60
+  # - label: ":ubuntu: Ubuntu 18.04 NP Tests"
+  #   command:
+  #     - "echo \"--- :arrow_down: Downloading Build Directory\" && buildkite-agent artifact download \"build.tar.gz\" . --step \":ubuntu: Ubuntu 18.04 Build\""
+  #     - "./scripts/serial-test.sh"
+  #   agents:
+  #     queue: "automation-large-builder-fleet"
+  #   plugins:
+  #     ecr#v1.1.4:
+  #       login: true
+  #       account_ids: "436617320021"
+  #       no-include-email: true
+  #       region: "us-west-2"
+  #     docker#v3.2.0:
+  #       shell: ["/bin/bash", "-i", "-e", "-c"]
+  #       debug: true
+  #       image: "436617320021.dkr.ecr.us-west-2.amazonaws.com/ci:ubuntu18_2-4"
+  #       propagate-environment: true
+  #       workdir: /data/job
+  #   timeout: 60
 
-  - wait: # Test Metrics
-    continue_on_failure: true
+  # - wait: # Test Metrics
+  #   continue_on_failure: true
 
-  - command: |
-        cd scripts/metrics
-        node --max-old-space-size=4096 test-metrics.js
-    label: ":bar_chart: Test Metrics"
-    agents:
-      queue: "automation-apps-builder-fleet"
-    timeout: 10
-    soft_fail: true
+  # - command: |
+  #       cd scripts/metrics
+  #       node --max-old-space-size=4096 test-metrics.js
+  #   label: ":bar_chart: Test Metrics"
+  #   agents:
+  #     queue: "automation-apps-builder-fleet"
+  #   timeout: 10
+  #   soft_fail: true
 
   - wait
 
